Fix mobile spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,6 +6,7 @@ body {
     width: 60%;
     margin: 0 auto;
     padding: 20px 0 0 0;
+    box-sizing: border-box;
 }
 
 .section-spacer {
